error.txt
In file included from plan.cpp:9,
                 from gsSql.cpp:7:
binding.cpp: In member function ‘ParseResult Binding::editColumn(Column*, char*)’:
binding.cpp:774:11: error: enumeration value ‘t_undefined’ not handled in switch [-Werror=switch]
  774 |     switch(_col->edit)
      |           ^
binding.cpp: In member function ‘ParseResult Binding::editCondition(Condition*)’:
binding.cpp:862:11: error: enumeration value ‘t_undefined’ not handled in switch [-Werror=switch]
  862 |     switch(_con->col->edit)
      |           ^
In file included from sqlEngine.cpp:20,
                 from sqlSelectEngine.cpp:4,
                 from plan.cpp:10:
compare.cpp: In function ‘ParseResult queryContitionsMet(std::__cxx11::list<Condition*>, char*)’:
compare.cpp:236:23: error: enumeration value ‘t_undefined’ not handled in switch [-Werror=switch]
  236 |                 switch(condition->col->edit)
      |                       ^
compare.cpp: In function ‘int compareTempColumns(TempColumn*, TempColumn*)’:
compare.cpp:306:15: error: enumeration value ‘t_undefined’ not handled in switch [-Werror=switch]
  306 |         switch(col1->edit)
      |               ^
compare.cpp: In function ‘ParseResult compareHavingCondition(TempColumn*, Condition*)’:
compare.cpp:368:15: error: enumeration value ‘t_undefined’ not handled in switch [-Werror=switch]
  368 |         switch(_rowCol->edit)
      |               ^
In file included from sqlEngine.cpp:21:
resultList.h: In member function ‘std::string resultList::formatColumn(TempColumn*)’:
resultList.h:366:15: error: enumeration value ‘t_undefined’ not handled in switch [-Werror=switch]
  366 |         switch(_col->edit)
      |               ^
sqlEngine.cpp: In member function ‘std::vector<TempColumn*> sqlEngine::outputLine(std::__cxx11::list<Column*>)’:
sqlEngine.cpp:152:23: error: enumeration value ‘t_undefined’ not handled in switch [-Werror=switch]
  152 |                 switch(col->edit)
      |                       ^
In file included from plan.cpp:12:
sqlModifyEngine.cpp: In member function ‘ParseResult sqlModifyEngine::formatInput(char*, Column*)’:
sqlModifyEngine.cpp:372:15: error: enumeration value ‘t_undefined’ not handled in switch [-Werror=switch]
  372 |         switch(_col->edit)
      |               ^
cc1plus: all warnings being treated as errors
